[gd_scene load_steps=2 format=3 uid="uid://bk7eyevxk0dr"]

[ext_resource type="Script" path="res://screens/end_screen.gd" id="1_gga0w"]

[node name="EndScreen" type="Node2D"]
script = ExtResource("1_gga0w")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 992.0
offset_bottom = 992.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.294118, 0.576471, 0.466667, 1)

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -93.0
offset_top = 23.0
offset_right = 94.0
offset_bottom = 95.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Game Over"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -108.0
offset_top = 116.0
offset_right = 109.0
offset_bottom = 152.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "TODO: PUT GAME TIME STATS HERE"
horizontal_alignment = 1

[node name="PhaseLabel" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -143.0
offset_top = 171.0
offset_right = 145.0
offset_bottom = 207.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "TODO: PUT GAME PHASES STATS HERE"
horizontal_alignment = 1

[node name="MainMenuButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -166.0
offset_top = -169.0
offset_right = 170.0
offset_bottom = -92.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Main Menu"

[connection signal="pressed" from="Control/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
